...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
........S. [ZBX-7204] fixed timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.7rc1

New features:

Bug fixes:
..F....... [ZBX-8701] fixed disabled web scenarios being displayed in the web monitoring widget (Pavels)
..F....... [ZBX-3407] fixed NVPS query to not fail on DB2 (Krists)
...G...... [ZBX-8646] added a warning on UNIX/GNU/Linux platforms if logrt[] directory has no 'execute' permission (Andris)
........S. [ZBX-8541] fixed queue calculation when hosts with active items return from no data maintenance (asaveljevs)
........S. [ZBX-8414] fixed value cache statistics update when database contains only part of requested data (wiper)
........S. [ZBX-8414] fixed value cache single value request returning FAIL for not found items in low memory mode (wiper)
..F....... [ZBX-8616] fixed link to host items in Inventory->Hosts host view (Krists)

--------------------------------------------------------------------------------
Changes for 2.2.6

New features:
A.F....... [ZBX-1357] updated Chinese (Taiwan) and Polish translations; thanks to Zabbix translators (Richlv)

--------------------------------------------------------------------------------
Changes for 2.2.6rc1

New features:
..F....... [ZBX-8275] implemented web scenario cloning (Ivo)
A.......S. [ZBX-8473] improved performance of deleting triggers by API and server - events will be deleted only by the housekeeper (Krists, Sasha)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Japanese, Polish, Slovak and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
........S. [ZBX-7721] added support for discovering more than 100 hypervisors on large vcenter installations to vmware collector (wiper, dimir)