@@ -150,10 +150,6 @@ class CUserMedia extends CApiService {
 
 		// search
 		if (is_array($options['search'])) {
-			if ($options['search']['passwd']) {
-				self::exception(ZBX_API_ERROR_PARAMETERS, _('It is not possible to search by user password.'));
-			}
-
 			zbx_db_search('media m', $options, $sqlParts);
 		}
 
