@@ -118,7 +118,7 @@ foreach ($this->data['usergroups'] as $usrgrp) {
 	$userGroupTable->addRow(array(
 		new CCheckBox('group_groupid['.$userGroupId.']', null, null, $userGroupId),
 		new CLink($usrgrp['name'], 'usergrps.php?form=update&usrgrpid='.$userGroupId),
-		array(new CLink(_('Users'), 'users.php?&filter_usrgrpid='.$userGroupId), ' (', count($usrgrp['users']), ')'),
+		array(new CLink(_('Users'), 'users.php?filter_usrgrpid='.$userGroupId), ' (', count($usrgrp['users']), ')'),
 		new CCol($users, 'wraptext'),
 		$guiAccess,
 		$debugMode,
